DotNet/Manifold/ManifoldNative.cs


// CrossSection Transformation
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection *manifold_cross_section_translate(IntPtr  mem,
                                                       ManifoldCrossSection *cs,
                                                       double x, double y);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection *manifold_cross_section_rotate(IntPtr  mem,
                                                    ManifoldCrossSection *cs,
                                                    double deg);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection *manifold_cross_section_scale(IntPtr  mem,
                                                   ManifoldCrossSection *cs,
                                                   double x, double y);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection *manifold_cross_section_mirror(IntPtr  mem,
                                                    ManifoldCrossSection *cs,
                                                    double ax_x, double ax_y);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection *manifold_cross_section_transform(IntPtr  mem,
                                                       ManifoldCrossSection *cs,
                                                       double x1, double y1,
                                                       double x2, double y2,
                                                       double x3, double y3);
// ManifoldCrossSection *manifold_cross_section_warp(
//     IntPtr  mem, ManifoldCrossSection *cs, ManifoldVec2 (*fun)(double, double));
// ManifoldCrossSection *manifold_cross_section_warp_context(
//     IntPtr  mem, ManifoldCrossSection *cs,
//     ManifoldVec2 (*fun)(double, double, IntPtr  ), IntPtr  ctx);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection *manifold_cross_section_simplify(IntPtr  mem,
                                                      ManifoldCrossSection *cs,
                                                      double epsilon);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldCrossSection *manifold_cross_section_offset(
    IntPtr  mem, ManifoldCrossSection *cs, double delta, ManifoldJoinType jt,
    double miter_limit, int circular_segments);

// CrossSection Info
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern double manifold_cross_section_area(ManifoldCrossSection *cs);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_cross_section_num_vert(ManifoldCrossSection *cs);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_cross_section_num_contour(ManifoldCrossSection *cs);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_cross_section_is_empty(ManifoldCrossSection *cs);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldRect *manifold_cross_section_bounds(IntPtr  mem,
                                            ManifoldCrossSection *cs);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldPolygons *manifold_cross_section_to_polygons(IntPtr  mem,
                                                     ManifoldCrossSection *cs);

// Rectangle
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldRect *manifold_rect(IntPtr  mem, double x1, double y1, double x2,
                            double y2);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldVec2 manifold_rect_min(ManifoldRect *r);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldVec2 manifold_rect_max(ManifoldRect *r);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldVec2 manifold_rect_dimensions(ManifoldRect *r);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldVec2 manifold_rect_center(ManifoldRect *r);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern double manifold_rect_scale(ManifoldRect *r);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_rect_contains_pt(ManifoldRect *r, double x, double y);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_rect_contains_rect(ManifoldRect *a, ManifoldRect *b);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_rect_include_pt(ManifoldRect *r, double x, double y);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldRect *manifold_rect_union(IntPtr  mem, ManifoldRect *a, ManifoldRect *b);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldRect *manifold_rect_transform(IntPtr  mem, ManifoldRect *r, double x1,
                                      double y1, double x2, double y2,
                                      double x3, double y3);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldRect *manifold_rect_translate(IntPtr  mem, ManifoldRect *r, double x,
                                      double y);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldRect *manifold_rect_mul(IntPtr  mem, ManifoldRect *r, double x, double y);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_rect_does_overlap_rect(ManifoldRect *a, ManifoldRect *r);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_rect_is_empty(ManifoldRect *r);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_rect_is_finite(ManifoldRect *r);

// Bounding Box
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldBox *manifold_box(IntPtr  mem, double x1, double y1, double z1, double x2,
                          double y2, double z2);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldVec3 manifold_box_min(ManifoldBox *b);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldVec3 manifold_box_max(ManifoldBox *b);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldVec3 manifold_box_dimensions(ManifoldBox *b);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldVec3 manifold_box_center(ManifoldBox *b);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern double manifold_box_scale(ManifoldBox *b);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_box_contains_pt(ManifoldBox *b, double x, double y, double z);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_box_contains_box(ManifoldBox *a, ManifoldBox *b);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_box_include_pt(ManifoldBox *b, double x, double y, double z);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldBox *manifold_box_union(IntPtr  mem, ManifoldBox *a, ManifoldBox *b);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldBox *manifold_box_transform(IntPtr  mem, ManifoldBox *b, double x1,
                                    double y1, double z1, double x2, double y2,
                                    double z2, double x3, double y3, double z3,
                                    double x4, double y4, double z4);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldBox *manifold_box_translate(IntPtr  mem, ManifoldBox *b, double x,
                                    double y, double z);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldBox *manifold_box_mul(IntPtr  mem, ManifoldBox *b, double x, double y,
                              double z);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_box_does_overlap_pt(ManifoldBox *b, double x, double y, double z);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_box_does_overlap_box(ManifoldBox *a, ManifoldBox *b);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_box_is_finite(ManifoldBox *b);

// Static Quality Globals
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_set_min_circular_angle(double degrees);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_set_min_circular_edge_length(double length);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_set_circular_segments(int number);
